--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@
 # Read about how to use .gitignore: https://help.github.com/articles/ignoring-files
 
 .DS_Store
+
+*.scssc
+
+*.sublime-project
+
+*.sublime-workspace
