--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "scss"]
 	path = scss
-	url = git://github.com/csswizardry/inuit.css.git
+	url = https://rtvenge@github.com/rtvenge/inuit.css.git
